@@ -6,7 +6,7 @@
 	provider-name="Skipmode A1">
   <requires>
     <import addon="xbmc.python"                     version="2.14.0"/>
-    <import addon="script.module.beautifulsoup4"    version="4.3.1"/>
+    <import addon="script.module.beautifulsoup4"    version="4.3.2"/>
 	<import addon="script.module.requests"          version="2.4.3"/>
     <import addon="script.module.future"            version="0.0.1"/>
   	<import addon="script.module.html5lib"          version="0.999.0"/>
@@ -24,10 +24,11 @@
 	<disclaimer lang="nl">Bugs of andere feedback op deze plugin kan geplaatst worden in de ggmania.com thread op het XBMC forum.</disclaimer>
     <language>en</language>
     <platform>all</platform>
-    <license>GNU GENERAL PUBLIC LICENSE. Version 3, June 2007</license>
+    <license>GPL-2.0-or-later</license>
     <forum>http://forum.xbmc.org/showthread.php?tid=203210</forum>
     <website>http://ggmania.com</website>
     <email></email>
     <source>https://github.com/skipmodea1/plugin.video.gamegurumania</source>
+    <broken>Marked addon BROKEN for gotham branch</broken>
   </extension>
 </addon>
